--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -71,3 +71,11 @@ h1{
   color: #333;
   line-height: 1.5;
 }
+
+.icon {
+  transition: transform 0.3s ease-in-out; 
+}
+
+.icon.rotate {
+  transform: rotate(180deg); 
+}
